<resources>
    <string name="app_name">CoffieITAssessment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dark_roasted_beans">Dark Roasted Beans</string>
    <string name="tab_the_machine_to_start">Tab the machine to start (demo)</string>
    <string name="start_the_app">Start the APP</string>
    <string name="the_app_works_with_lex_device">The App now works with the Lex Device</string>
    <string name="brew_with_lex">Brew with Lex</string>
    <string name="select_your_style">Select your style</string>
    <string name="overview">Overview</string>
    <string name="extras">Extras</string>
    <string name="size">Size</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="dx">%dX</string>
    <string name="edit"><u>Edit</u></string>
    <string name="d_sizes">%d sizes</string>
    <string name="d_extras">%d Extras</string>
    <string name="please_select_one_size">Please select one Size!</string>
    <string name="count">Count</string>
    <string name="done">Done</string>
    <string name="brew_your_coffee">Brew your coffee!</string>
    <string name="try_again">Try Again!</string>
</resources>