<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartUpFragment">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/coffee_startup" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@color/black" />

    <TextView
        android:id="@+id/txt_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/dark_roasted_beans"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/tab_the_machine_to_start"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_header" />

    <TextView
        android:id="@+id/bt_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape_green_10r"
        android:gravity="center"
        android:textSize="18sp"
        android:typeface="monospace"
        android:text="@string/start_the_app"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/txt_footer" />

    <TextView
        android:id="@+id/txt_footer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/the_app_works_with_lex_device"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/bt_start"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/bt_start" />

</androidx.constraintlayout.widget.ConstraintLayout>