<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ddd"
    android:orientation="vertical"
    tools:context=".ProductsFragment">

    <View
        android:id="@+id/view_right"
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:background="#BF8B60"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/power_off"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/img_exit"
        app:layout_constraintEnd_toEndOf="@id/view_right"
        app:layout_constraintStart_toStartOf="@id/view_right" />


    <RelativeLayout
        android:id="@+id/lyt_overview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/view_right"
        app:layout_constraintStart_toStartOf="@id/view_right"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/txt_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="4dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/shape_bt_green_50r"
            android:elevation="4dp"
            android:fontFamily="monospace"
            android:foregroundGravity="center"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/overview"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@drawable/shape_red_10r"
            android:id="@+id/txt_itemCount"
            android:translationZ="90dp"
            android:fontFamily="monospace"
            android:padding="2dp"
            tools:text="1"
            android:minWidth="30dp"
            android:gravity="center"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="monospace"
        android:gravity="start"
        android:paddingStart="16dp"
        android:text="@string/brew_with_lex"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="monospace"
        android:gravity="start"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/select_your_style"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_title" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcl_products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clipChildren="true"
        android:clipToPadding="true"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/txt_description"
        tools:itemCount="4"
        tools:listitem="@layout/item_product" />

</androidx.constraintlayout.widget.ConstraintLayout>