<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="type"
            type="com.babakmhz.coffeeitassessment.data.model.device.Type" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".view.order.OrderFragment">


            <ImageView
                android:id="@+id/img_header"
                android:layout_width="50dp"
                android:layout_height="4dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape_gray_32r"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                android:text="@{type.name}"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_header"
                tools:text="vanilla sweet cream cold brew bla bla bla..." />

            <TextView
                android:id="@+id/txt_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                android:text="@string/size"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_header" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcl_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:foregroundGravity="center"
                android:orientation="horizontal"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="3"
                tools:listitem="@layout/item_size" />
            <TextView
                android:id="@+id/txt_item_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                android:text="@string/count"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_header" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/lyt_count"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt_minus"
                    android:layout_weight="1"
                    android:background="@drawable/shape_green_8r_no_padding"
                    android:gravity="center"
                    android:text="-"
                    android:padding="4dp"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:typeface="monospace"
                    app:layout_constraintBottom_toTopOf="@id/txt_footer" />
                <TextView
                    android:id="@+id/txt_count_indicator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="start"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="monospace"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_header" />
                <TextView
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/shape_green_8r_no_padding"
                    android:id="@+id/bt_plus"
                    android:gravity="center"
                    android:text="+"
                    android:padding="4dp"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:typeface="monospace"
                    app:layout_constraintBottom_toTopOf="@id/txt_footer" />

            </LinearLayout>
            <TextView
                android:id="@+id/txt_extras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                android:text="@string/extras"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_header" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcl_extras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:foregroundGravity="center"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="32dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="3"
                tools:listitem="@layout/item_extras" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/bt_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/material_green"
                    android:textSize="18sp"
                    android:typeface="monospace"
                    app:layout_constraintBottom_toTopOf="@id/txt_footer" />

                <TextView
                    android:id="@+id/bt_confirm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_green_10r"
                    android:gravity="center"
                    android:text="@string/confirm"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:typeface="monospace"
                    app:layout_constraintBottom_toTopOf="@id/txt_footer" />
            </LinearLayout>

        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
